# writing-pipeline-AI

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  TODO_example.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  paths.py  settings.py
app/api/: main.py
app/corpus/: __init__.py  author_profile.py  chroma_index.py  chunker.py  corpus_store.py  embeddings.py  ingest_loader.py  ingest_pipeline.py  retrieval.py  style_features.py  text_cleaner.py
app/db/: __init__.py  sqlite_schema.py
app/domain/: __init__.py  pipeline_errors.py  state_machine.py
app/feishu/: __init__.py  bot_loop.py  event_adapter.py  openapi_client.py  router.py  status_push.py
app/pipeline/: __init__.py  client_factory.py  degrade.py  draft_generator.py  llm_protocol.py  models.py  outline_gate.py  outline_generator.py  polish_pipeline.py  qwen_client.py  request_normalizer.py  rewrite_service.py
app/services/: __init__.py  rewrite_workflow.py  task_store.py
app/workers/: __init__.py  tasks.py
config/: app_example.yaml  models_example.yaml
docs/: runbook-writing-agent.md  产品需求文档-写作Agent.md  技术方案-写作Agent.md
scripts/: run_api.ps1  run_feishu_bot.ps1
tests/: conftest.py  qwen_client.py  test_feishu.py  test_feishu_event_adapter.py
tests/phase1/: test_api_health_and_tasks.py  test_config_loader.py  test_feishu_longconn_router.py  test_sqlite_schema_init.py  test_task_state_machine_v1.py
tests/phase2/: test_author_profile_builder.py  test_chunker.py  test_dual_index_retrieval.py  test_embedding_index_chroma.py  (+3 more)
web/: index.html
(+36 files in other folders)
